parser/parser.output

state 0
	$accept: .program $end 
	program: .    (1)

	.  reduce 1 (src line 27)

	program  goto 1

state 1
	$accept:  program.$end 
	program:  program.statement 

	$end  accept
	NUMBER  shift 9
	IDENTIFIER  shift 10
	LET  shift 13
	IF  shift 15
	WHILE  shift 16
	PRINT  shift 14
	'-'  shift 12
	'('  shift 11
	.  error

	statement  goto 2
	expression  goto 3
	assignment  goto 4
	reassignment  goto 5
	print  goto 6
	control_flow  goto 7
	while_statement  goto 8

state 2
	program:  program statement.    (2)

	.  reduce 2 (src line 28)


state 3
	statement:  expression.SEPARATOR 
	expression:  expression.'+' expression 
	expression:  expression.'-' expression 
	expression:  expression.'*' expression 
	expression:  expression.'/' expression 
	expression:  expression.LT expression 
	expression:  expression.GT expression 
	expression:  expression.LTE expression 
	expression:  expression.GTE expression 
	expression:  expression.EQ expression 
	expression:  expression.NE expression 
	expression:  expression.OR expression 
	expression:  expression.AND expression 

	SEPARATOR  shift 17
	LT  shift 22
	LTE  shift 24
	GT  shift 23
	GTE  shift 25
	EQ  shift 26
	NE  shift 27
	OR  shift 28
	AND  shift 29
	'+'  shift 18
	'-'  shift 19
	'*'  shift 20
	'/'  shift 21
	.  error


state 4
	statement:  assignment.SEPARATOR 

	SEPARATOR  shift 30
	.  error


state 5
	statement:  reassignment.SEPARATOR 

	SEPARATOR  shift 31
	.  error


state 6
	statement:  print.SEPARATOR 

	SEPARATOR  shift 32
	.  error


state 7
	statement:  control_flow.    (7)

	.  reduce 7 (src line 36)


state 8
	statement:  while_statement.    (8)

	.  reduce 8 (src line 37)


state 9
	expression:  NUMBER.    (11)

	.  reduce 11 (src line 45)


state 10
	expression:  IDENTIFIER.    (12)
	reassignment:  IDENTIFIER.ASSIGN expression 

	ASSIGN  shift 33
	.  reduce 12 (src line 47)


state 11
	expression:  '('.expression ')' 

	NUMBER  shift 9
	IDENTIFIER  shift 35
	'-'  shift 12
	'('  shift 11
	.  error

	expression  goto 34

state 12
	expression:  '-'.expression 

	NUMBER  shift 9
	IDENTIFIER  shift 35
	'-'  shift 12
	'('  shift 11
	.  error

	expression  goto 36

state 13
	assignment:  LET.IDENTIFIER ASSIGN expression 

	IDENTIFIER  shift 37
	.  error


state 14
	print:  PRINT.'(' expression ')' 

	'('  shift 38
	.  error


state 15
	control_flow:  IF.'(' expression ')' '{' statements '}' 
	control_flow:  IF.'(' expression ')' '{' statements '}' ELSE '{' statements '}' 

	'('  shift 39
	.  error


state 16
	while_statement:  WHILE.'(' expression ')' '{' statements '}' 

	'('  shift 40
	.  error


state 17
	statement:  expression SEPARATOR.    (3)

	.  reduce 3 (src line 31)


state 18
	expression:  expression '+'.expression 

	NUMBER  shift 9
	IDENTIFIER  shift 35
	'-'  shift 12
	'('  shift 11
	.  error

	expression  goto 41

state 19
	expression:  expression '-'.expression 

	NUMBER  shift 9
	IDENTIFIER  shift 35
	'-'  shift 12
	'('  shift 11
	.  error

	expression  goto 42

state 20
	expression:  expression '*'.expression 

	NUMBER  shift 9
	IDENTIFIER  shift 35
	'-'  shift 12
	'('  shift 11
	.  error

	expression  goto 43

state 21
	expression:  expression '/'.expression 

	NUMBER  shift 9
	IDENTIFIER  shift 35
	'-'  shift 12
	'('  shift 11
	.  error

	expression  goto 44

state 22
	expression:  expression LT.expression 

	NUMBER  shift 9
	IDENTIFIER  shift 35
	'-'  shift 12
	'('  shift 11
	.  error

	expression  goto 45

state 23
	expression:  expression GT.expression 

	NUMBER  shift 9
	IDENTIFIER  shift 35
	'-'  shift 12
	'('  shift 11
	.  error

	expression  goto 46

state 24
	expression:  expression LTE.expression 

	NUMBER  shift 9
	IDENTIFIER  shift 35
	'-'  shift 12
	'('  shift 11
	.  error

	expression  goto 47

state 25
	expression:  expression GTE.expression 

	NUMBER  shift 9
	IDENTIFIER  shift 35
	'-'  shift 12
	'('  shift 11
	.  error

	expression  goto 48

state 26
	expression:  expression EQ.expression 

	NUMBER  shift 9
	IDENTIFIER  shift 35
	'-'  shift 12
	'('  shift 11
	.  error

	expression  goto 49

state 27
	expression:  expression NE.expression 

	NUMBER  shift 9
	IDENTIFIER  shift 35
	'-'  shift 12
	'('  shift 11
	.  error

	expression  goto 50

state 28
	expression:  expression OR.expression 

	NUMBER  shift 9
	IDENTIFIER  shift 35
	'-'  shift 12
	'('  shift 11
	.  error

	expression  goto 51

state 29
	expression:  expression AND.expression 

	NUMBER  shift 9
	IDENTIFIER  shift 35
	'-'  shift 12
	'('  shift 11
	.  error

	expression  goto 52

state 30
	statement:  assignment SEPARATOR.    (4)

	.  reduce 4 (src line 33)


state 31
	statement:  reassignment SEPARATOR.    (5)

	.  reduce 5 (src line 34)


state 32
	statement:  print SEPARATOR.    (6)

	.  reduce 6 (src line 35)


state 33
	reassignment:  IDENTIFIER ASSIGN.expression 

	NUMBER  shift 9
	IDENTIFIER  shift 35
	'-'  shift 12
	'('  shift 11
	.  error

	expression  goto 53

state 34
	expression:  expression.'+' expression 
	expression:  expression.'-' expression 
	expression:  expression.'*' expression 
	expression:  expression.'/' expression 
	expression:  expression.LT expression 
	expression:  expression.GT expression 
	expression:  expression.LTE expression 
	expression:  expression.GTE expression 
	expression:  expression.EQ expression 
	expression:  expression.NE expression 
	expression:  expression.OR expression 
	expression:  expression.AND expression 
	expression:  '(' expression.')' 

	LT  shift 22
	LTE  shift 24
	GT  shift 23
	GTE  shift 25
	EQ  shift 26
	NE  shift 27
	OR  shift 28
	AND  shift 29
	'+'  shift 18
	'-'  shift 19
	'*'  shift 20
	'/'  shift 21
	')'  shift 54
	.  error


state 35
	expression:  IDENTIFIER.    (12)

	.  reduce 12 (src line 47)


state 36
	expression:  expression.'+' expression 
	expression:  expression.'-' expression 
	expression:  expression.'*' expression 
	expression:  expression.'/' expression 
	expression:  expression.LT expression 
	expression:  expression.GT expression 
	expression:  expression.LTE expression 
	expression:  expression.GTE expression 
	expression:  expression.EQ expression 
	expression:  expression.NE expression 
	expression:  expression.OR expression 
	expression:  expression.AND expression 
	expression:  '-' expression.    (26)

	.  reduce 26 (src line 61)


state 37
	assignment:  LET IDENTIFIER.ASSIGN expression 

	ASSIGN  shift 55
	.  error


state 38
	print:  PRINT '('.expression ')' 

	NUMBER  shift 9
	IDENTIFIER  shift 35
	'-'  shift 12
	'('  shift 11
	.  error

	expression  goto 56

state 39
	control_flow:  IF '('.expression ')' '{' statements '}' 
	control_flow:  IF '('.expression ')' '{' statements '}' ELSE '{' statements '}' 

	NUMBER  shift 9
	IDENTIFIER  shift 35
	'-'  shift 12
	'('  shift 11
	.  error

	expression  goto 57

state 40
	while_statement:  WHILE '('.expression ')' '{' statements '}' 

	NUMBER  shift 9
	IDENTIFIER  shift 35
	'-'  shift 12
	'('  shift 11
	.  error

	expression  goto 58

state 41
	expression:  expression.'+' expression 
	expression:  expression '+' expression.    (13)
	expression:  expression.'-' expression 
	expression:  expression.'*' expression 
	expression:  expression.'/' expression 
	expression:  expression.LT expression 
	expression:  expression.GT expression 
	expression:  expression.LTE expression 
	expression:  expression.GTE expression 
	expression:  expression.EQ expression 
	expression:  expression.NE expression 
	expression:  expression.OR expression 
	expression:  expression.AND expression 

	'*'  shift 20
	'/'  shift 21
	.  reduce 13 (src line 48)


state 42
	expression:  expression.'+' expression 
	expression:  expression.'-' expression 
	expression:  expression '-' expression.    (14)
	expression:  expression.'*' expression 
	expression:  expression.'/' expression 
	expression:  expression.LT expression 
	expression:  expression.GT expression 
	expression:  expression.LTE expression 
	expression:  expression.GTE expression 
	expression:  expression.EQ expression 
	expression:  expression.NE expression 
	expression:  expression.OR expression 
	expression:  expression.AND expression 

	'*'  shift 20
	'/'  shift 21
	.  reduce 14 (src line 49)


state 43
	expression:  expression.'+' expression 
	expression:  expression.'-' expression 
	expression:  expression.'*' expression 
	expression:  expression '*' expression.    (15)
	expression:  expression.'/' expression 
	expression:  expression.LT expression 
	expression:  expression.GT expression 
	expression:  expression.LTE expression 
	expression:  expression.GTE expression 
	expression:  expression.EQ expression 
	expression:  expression.NE expression 
	expression:  expression.OR expression 
	expression:  expression.AND expression 

	.  reduce 15 (src line 50)


state 44
	expression:  expression.'+' expression 
	expression:  expression.'-' expression 
	expression:  expression.'*' expression 
	expression:  expression.'/' expression 
	expression:  expression '/' expression.    (16)
	expression:  expression.LT expression 
	expression:  expression.GT expression 
	expression:  expression.LTE expression 
	expression:  expression.GTE expression 
	expression:  expression.EQ expression 
	expression:  expression.NE expression 
	expression:  expression.OR expression 
	expression:  expression.AND expression 

	.  reduce 16 (src line 51)


state 45
	expression:  expression.'+' expression 
	expression:  expression.'-' expression 
	expression:  expression.'*' expression 
	expression:  expression.'/' expression 
	expression:  expression.LT expression 
	expression:  expression LT expression.    (17)
	expression:  expression.GT expression 
	expression:  expression.LTE expression 
	expression:  expression.GTE expression 
	expression:  expression.EQ expression 
	expression:  expression.NE expression 
	expression:  expression.OR expression 
	expression:  expression.AND expression 

	'+'  shift 18
	'-'  shift 19
	'*'  shift 20
	'/'  shift 21
	.  reduce 17 (src line 52)


state 46
	expression:  expression.'+' expression 
	expression:  expression.'-' expression 
	expression:  expression.'*' expression 
	expression:  expression.'/' expression 
	expression:  expression.LT expression 
	expression:  expression.GT expression 
	expression:  expression GT expression.    (18)
	expression:  expression.LTE expression 
	expression:  expression.GTE expression 
	expression:  expression.EQ expression 
	expression:  expression.NE expression 
	expression:  expression.OR expression 
	expression:  expression.AND expression 

	'+'  shift 18
	'-'  shift 19
	'*'  shift 20
	'/'  shift 21
	.  reduce 18 (src line 53)


state 47
	expression:  expression.'+' expression 
	expression:  expression.'-' expression 
	expression:  expression.'*' expression 
	expression:  expression.'/' expression 
	expression:  expression.LT expression 
	expression:  expression.GT expression 
	expression:  expression.LTE expression 
	expression:  expression LTE expression.    (19)
	expression:  expression.GTE expression 
	expression:  expression.EQ expression 
	expression:  expression.NE expression 
	expression:  expression.OR expression 
	expression:  expression.AND expression 

	'+'  shift 18
	'-'  shift 19
	'*'  shift 20
	'/'  shift 21
	.  reduce 19 (src line 54)


state 48
	expression:  expression.'+' expression 
	expression:  expression.'-' expression 
	expression:  expression.'*' expression 
	expression:  expression.'/' expression 
	expression:  expression.LT expression 
	expression:  expression.GT expression 
	expression:  expression.LTE expression 
	expression:  expression.GTE expression 
	expression:  expression GTE expression.    (20)
	expression:  expression.EQ expression 
	expression:  expression.NE expression 
	expression:  expression.OR expression 
	expression:  expression.AND expression 

	'+'  shift 18
	'-'  shift 19
	'*'  shift 20
	'/'  shift 21
	.  reduce 20 (src line 55)


state 49
	expression:  expression.'+' expression 
	expression:  expression.'-' expression 
	expression:  expression.'*' expression 
	expression:  expression.'/' expression 
	expression:  expression.LT expression 
	expression:  expression.GT expression 
	expression:  expression.LTE expression 
	expression:  expression.GTE expression 
	expression:  expression.EQ expression 
	expression:  expression EQ expression.    (21)
	expression:  expression.NE expression 
	expression:  expression.OR expression 
	expression:  expression.AND expression 

	'+'  shift 18
	'-'  shift 19
	'*'  shift 20
	'/'  shift 21
	.  reduce 21 (src line 56)


state 50
	expression:  expression.'+' expression 
	expression:  expression.'-' expression 
	expression:  expression.'*' expression 
	expression:  expression.'/' expression 
	expression:  expression.LT expression 
	expression:  expression.GT expression 
	expression:  expression.LTE expression 
	expression:  expression.GTE expression 
	expression:  expression.EQ expression 
	expression:  expression.NE expression 
	expression:  expression NE expression.    (22)
	expression:  expression.OR expression 
	expression:  expression.AND expression 

	'+'  shift 18
	'-'  shift 19
	'*'  shift 20
	'/'  shift 21
	.  reduce 22 (src line 57)


state 51
	expression:  expression.'+' expression 
	expression:  expression.'-' expression 
	expression:  expression.'*' expression 
	expression:  expression.'/' expression 
	expression:  expression.LT expression 
	expression:  expression.GT expression 
	expression:  expression.LTE expression 
	expression:  expression.GTE expression 
	expression:  expression.EQ expression 
	expression:  expression.NE expression 
	expression:  expression.OR expression 
	expression:  expression OR expression.    (23)
	expression:  expression.AND expression 

	'+'  shift 18
	'-'  shift 19
	'*'  shift 20
	'/'  shift 21
	.  reduce 23 (src line 58)


state 52
	expression:  expression.'+' expression 
	expression:  expression.'-' expression 
	expression:  expression.'*' expression 
	expression:  expression.'/' expression 
	expression:  expression.LT expression 
	expression:  expression.GT expression 
	expression:  expression.LTE expression 
	expression:  expression.GTE expression 
	expression:  expression.EQ expression 
	expression:  expression.NE expression 
	expression:  expression.OR expression 
	expression:  expression.AND expression 
	expression:  expression AND expression.    (24)

	'+'  shift 18
	'-'  shift 19
	'*'  shift 20
	'/'  shift 21
	.  reduce 24 (src line 59)


state 53
	expression:  expression.'+' expression 
	expression:  expression.'-' expression 
	expression:  expression.'*' expression 
	expression:  expression.'/' expression 
	expression:  expression.LT expression 
	expression:  expression.GT expression 
	expression:  expression.LTE expression 
	expression:  expression.GTE expression 
	expression:  expression.EQ expression 
	expression:  expression.NE expression 
	expression:  expression.OR expression 
	expression:  expression.AND expression 
	reassignment:  IDENTIFIER ASSIGN expression.    (28)

	LT  shift 22
	LTE  shift 24
	GT  shift 23
	GTE  shift 25
	EQ  shift 26
	NE  shift 27
	OR  shift 28
	AND  shift 29
	'+'  shift 18
	'-'  shift 19
	'*'  shift 20
	'/'  shift 21
	.  reduce 28 (src line 68)


state 54
	expression:  '(' expression ')'.    (25)

	.  reduce 25 (src line 60)


state 55
	assignment:  LET IDENTIFIER ASSIGN.expression 

	NUMBER  shift 9
	IDENTIFIER  shift 35
	'-'  shift 12
	'('  shift 11
	.  error

	expression  goto 59

state 56
	expression:  expression.'+' expression 
	expression:  expression.'-' expression 
	expression:  expression.'*' expression 
	expression:  expression.'/' expression 
	expression:  expression.LT expression 
	expression:  expression.GT expression 
	expression:  expression.LTE expression 
	expression:  expression.GTE expression 
	expression:  expression.EQ expression 
	expression:  expression.NE expression 
	expression:  expression.OR expression 
	expression:  expression.AND expression 
	print:  PRINT '(' expression.')' 

	LT  shift 22
	LTE  shift 24
	GT  shift 23
	GTE  shift 25
	EQ  shift 26
	NE  shift 27
	OR  shift 28
	AND  shift 29
	'+'  shift 18
	'-'  shift 19
	'*'  shift 20
	'/'  shift 21
	')'  shift 60
	.  error


state 57
	expression:  expression.'+' expression 
	expression:  expression.'-' expression 
	expression:  expression.'*' expression 
	expression:  expression.'/' expression 
	expression:  expression.LT expression 
	expression:  expression.GT expression 
	expression:  expression.LTE expression 
	expression:  expression.GTE expression 
	expression:  expression.EQ expression 
	expression:  expression.NE expression 
	expression:  expression.OR expression 
	expression:  expression.AND expression 
	control_flow:  IF '(' expression.')' '{' statements '}' 
	control_flow:  IF '(' expression.')' '{' statements '}' ELSE '{' statements '}' 

	LT  shift 22
	LTE  shift 24
	GT  shift 23
	GTE  shift 25
	EQ  shift 26
	NE  shift 27
	OR  shift 28
	AND  shift 29
	'+'  shift 18
	'-'  shift 19
	'*'  shift 20
	'/'  shift 21
	')'  shift 61
	.  error


state 58
	expression:  expression.'+' expression 
	expression:  expression.'-' expression 
	expression:  expression.'*' expression 
	expression:  expression.'/' expression 
	expression:  expression.LT expression 
	expression:  expression.GT expression 
	expression:  expression.LTE expression 
	expression:  expression.GTE expression 
	expression:  expression.EQ expression 
	expression:  expression.NE expression 
	expression:  expression.OR expression 
	expression:  expression.AND expression 
	while_statement:  WHILE '(' expression.')' '{' statements '}' 

	LT  shift 22
	LTE  shift 24
	GT  shift 23
	GTE  shift 25
	EQ  shift 26
	NE  shift 27
	OR  shift 28
	AND  shift 29
	'+'  shift 18
	'-'  shift 19
	'*'  shift 20
	'/'  shift 21
	')'  shift 62
	.  error


state 59
	expression:  expression.'+' expression 
	expression:  expression.'-' expression 
	expression:  expression.'*' expression 
	expression:  expression.'/' expression 
	expression:  expression.LT expression 
	expression:  expression.GT expression 
	expression:  expression.LTE expression 
	expression:  expression.GTE expression 
	expression:  expression.EQ expression 
	expression:  expression.NE expression 
	expression:  expression.OR expression 
	expression:  expression.AND expression 
	assignment:  LET IDENTIFIER ASSIGN expression.    (27)

	LT  shift 22
	LTE  shift 24
	GT  shift 23
	GTE  shift 25
	EQ  shift 26
	NE  shift 27
	OR  shift 28
	AND  shift 29
	'+'  shift 18
	'-'  shift 19
	'*'  shift 20
	'/'  shift 21
	.  reduce 27 (src line 64)


state 60
	print:  PRINT '(' expression ')'.    (29)

	.  reduce 29 (src line 72)


state 61
	control_flow:  IF '(' expression ')'.'{' statements '}' 
	control_flow:  IF '(' expression ')'.'{' statements '}' ELSE '{' statements '}' 

	'{'  shift 63
	.  error


state 62
	while_statement:  WHILE '(' expression ')'.'{' statements '}' 

	'{'  shift 64
	.  error


state 63
	control_flow:  IF '(' expression ')' '{'.statements '}' 
	control_flow:  IF '(' expression ')' '{'.statements '}' ELSE '{' statements '}' 

	NUMBER  shift 9
	IDENTIFIER  shift 10
	LET  shift 13
	IF  shift 15
	WHILE  shift 16
	PRINT  shift 14
	'-'  shift 12
	'('  shift 11
	.  error

	statements  goto 65
	statement  goto 66
	expression  goto 3
	assignment  goto 4
	reassignment  goto 5
	print  goto 6
	control_flow  goto 7
	while_statement  goto 8

state 64
	while_statement:  WHILE '(' expression ')' '{'.statements '}' 

	NUMBER  shift 9
	IDENTIFIER  shift 10
	LET  shift 13
	IF  shift 15
	WHILE  shift 16
	PRINT  shift 14
	'-'  shift 12
	'('  shift 11
	.  error

	statements  goto 67
	statement  goto 66
	expression  goto 3
	assignment  goto 4
	reassignment  goto 5
	print  goto 6
	control_flow  goto 7
	while_statement  goto 8

state 65
	control_flow:  IF '(' expression ')' '{' statements.'}' 
	control_flow:  IF '(' expression ')' '{' statements.'}' ELSE '{' statements '}' 

	'}'  shift 68
	.  error


state 66
	statements:  statement.statements 
	statements:  statement.    (10)

	NUMBER  shift 9
	IDENTIFIER  shift 10
	LET  shift 13
	IF  shift 15
	WHILE  shift 16
	PRINT  shift 14
	'-'  shift 12
	'('  shift 11
	.  reduce 10 (src line 42)

	statements  goto 69
	statement  goto 66
	expression  goto 3
	assignment  goto 4
	reassignment  goto 5
	print  goto 6
	control_flow  goto 7
	while_statement  goto 8

state 67
	while_statement:  WHILE '(' expression ')' '{' statements.'}' 

	'}'  shift 70
	.  error


state 68
	control_flow:  IF '(' expression ')' '{' statements '}'.    (30)
	control_flow:  IF '(' expression ')' '{' statements '}'.ELSE '{' statements '}' 

	ELSE  shift 71
	.  reduce 30 (src line 76)


state 69
	statements:  statement statements.    (9)

	.  reduce 9 (src line 40)


state 70
	while_statement:  WHILE '(' expression ')' '{' statements '}'.    (32)

	.  reduce 32 (src line 81)


state 71
	control_flow:  IF '(' expression ')' '{' statements '}' ELSE.'{' statements '}' 

	'{'  shift 72
	.  error


state 72
	control_flow:  IF '(' expression ')' '{' statements '}' ELSE '{'.statements '}' 

	NUMBER  shift 9
	IDENTIFIER  shift 10
	LET  shift 13
	IF  shift 15
	WHILE  shift 16
	PRINT  shift 14
	'-'  shift 12
	'('  shift 11
	.  error

	statements  goto 73
	statement  goto 66
	expression  goto 3
	assignment  goto 4
	reassignment  goto 5
	print  goto 6
	control_flow  goto 7
	while_statement  goto 8

state 73
	control_flow:  IF '(' expression ')' '{' statements '}' ELSE '{' statements.'}' 

	'}'  shift 74
	.  error


state 74
	control_flow:  IF '(' expression ')' '{' statements '}' ELSE '{' statements '}'.    (31)

	.  reduce 31 (src line 78)


30 terminals, 10 nonterminals
33 grammar rules, 75/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
59 working sets used
memory: parser 58/240000
56 extra closures
257 shift entries, 1 exceptions
32 goto entries
27 entries saved by goto default
Optimizer space used: output 172/240000
172 table entries, 29 zero
maximum spread: 30, maximum offset: 72
